2010-01-19 Man Lung Wong  <mwong@redhat.com>

	* rt/net/sourceforge/jnlp/JNLPFile.java
	(parser): Added a default value for sourceLocation to make sure it
	is not null (location is never null).
	* rt/net/sourceforge/jnlp/Parser.java:
	Removed variable base, and replaced it with codebase. The fix ended
	with base the same as codebase, hence no longer needed. Otherwise,
	netxwill launch a jnlp file with codebase null and href not
	null (not the way sun's webstart behaves).
	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java
	(setSecurity): Added a variable codebase, which gets the value of
	codebase attribute in the jnlp file if it exists. Otherwise, it gets
	the value of the location of main jar resource (which needs to be
	changed to the codebase portion instead of the entire location).

2010-01-17  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-sparc-trapsfix.patch: Merged sparc headers
	are located in asm/.

2010-01-15  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/icedtea-npplugin): New target, add file
	dependencies for building the IcedTeaNPPlugin.so.

2010-01-15  Xerxes Rånby  <xerxes@zafena.se>

	PR icedtea/428:
	* configure.ac (LLVM_CFLAGS): Remove -pedantic from LLVM_CFLAGS.

2010-01-13  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc
	(newMessageOnBus): Service GetSlot and SetSlot requests.
	(call): Create Java object from result only if it is non-null.
	(setMember): Pass a preset identifier to _setMember. Handle array slot
	setting.
	(sendMember): Handle array slot read.
	(queue_processor): Service GetSlot and SetSlot requests.
	(_setMember): Work with property NPIdentifier instead of name string.
	(_getMember): Same.
	* plugin/icedteanp/IcedTeaPluginUtils.cc
	(isObjectJSArray): Handle void constructor objects like 'window'.
	* plugin/tests/LiveConnect/DummyObject.java: New file. Helper for plugin 
	tests.
	* plugin/tests/LiveConnect/OverloadTestHelper1.java: Same.